--- a/_variables.scss
+++ b/_variables.scss
@@ -18,3 +18,28 @@ $color-secondary: $green;
 $text-family-primary: 'Abril Fatface', cursive;;
 $text-family-secondary: 'Open Sans', sans-serif;;
 $text-color: #323031;
+
+$default-font-weight: default;
+$heading-font-weight: normal;
+
+$default-line-spacing: default;
+$heading-line-spacing: .05em;
+
+// $colors: ("red":$red, ""#E7C643, #53C16E, #95e1d3);
+
+// :root {
+//     @each $name, $val in $colors {
+//         --color-#{$name}: $val;
+//     }
+
+
+
+//     --color-red: #DC3F3E;
+//     --color-red: $yellow;
+//     --color3
+//     --color-4
+//     --color-5
+//     --color-6
+//     --color-7
+//     --color-8
+// }
